--- a/index.html
+++ b/index.html
@@ -11,7 +11,34 @@
 <body>
     <div>
         <h3>
-            My WEBPAGE
+            My First WEBPAGE
+        </h3>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla deserunt culpa aliquam a eligendi ullam aut
+            autem sunt, exercitationem esse et, sint fugit id quibusdam placeat error, porro libero consequuntur.
+        </p>
+    </div>
+    <div class="ururu">
+        <h3>
+            My Second WEBPAGE
+        </h3>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla deserunt culpa aliquam a eligendi ullam aut
+            autem sunt, exercitationem esse et, sint fugit id quibusdam placeat error, porro libero consequuntur.
+        </p>
+    </div>
+    <div>
+        <h3>
+            My Third WEBPAGE
+        </h3>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla deserunt culpa aliquam a eligendi ullam aut
+            autem sunt, exercitationem esse et, sint fugit id quibusdam placeat error, porro libero consequuntur.
+        </p>
+    </div>
+    <div class="guru">
+        <h3>
+            My fourth WEBPAGE
         </h3>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla deserunt culpa aliquam a eligendi ullam aut
